--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -348,16 +348,16 @@ header .container>.row .col-lg-6 .img-box>.plant-img-3{
     border-radius: 10px;
     padding: 35px 22px 45px 22px;
     box-shadow: 0px 0px 150px 0px #EEEEEE;
-    transition:all 0.4s ease-in;
-    -webkit-transition:all 0.4s ease-in;
-    -moz-transition:all 0.4s ease-in;
-    -ms-transition:all 0.4s ease-in;
-    -o-transition:all 0.4s ease-in;
+    transition:all 0.4s linear;
+    -webkit-transition:all 0.4s linear;
+    -moz-transition:all 0.4s linear;
+    -ms-transition:all 0.4s linear;
+    -o-transition:all 0.4s linear;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-    margin-bottom:20px;
+    margin-bottom:30px;
 }
 .Works .card:hover{
     background-color: var(--primary-color);
