--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -821,6 +821,104 @@ header .container>.row .col-lg-6 .img-box>.plant-img-3{
     width: 100%;
 }
 /* -------request end---------------- */
+/* -------team start---------------- */
+.team{
+    padding: 4rem 0;
+}
+.team .owl-carousel
+{
+    margin-top: 2rem;
+}
+.team .team-item .team-img{
+    width: 100%;
+    position: relative;
+}
+.team .team-item{
+    width: 90%;
+    margin: 0 auto;
+    overflow: hidden;
+   position: relative;  
+}
+.team .team-item .team-img img{
+    width: 100%;
+    object-fit: cover;
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+}
+.team .team-item:hover .team-img img{
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+}
+.team .team-item .desc{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color:var(--primary-color);
+    text-align: center;
+    position: relative;
+    transition:all .4s  ease;
+    -webkit-transition:all .4s  ease;
+    -moz-transition:all .4s  ease;
+    -ms-transition:all .4s  ease;
+    -o-transition:all .4s  ease;
+    padding: 10px 20px ;
+    height: 100px;
+}
+.team .team-item:hover .desc
+{
+    box-shadow: 0 0 150px #eee;
+    height: 140px;
+    bottom: 40px;
+}
+
+.team .team-item .desc a{
+    display: inline-block;
+    line-height:2rem;
+    text-decoration: none;
+    color:var(--white);
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+.team .team-item .desc p{
+    margin-bottom: 0;
+    font-weight: 500;
+    font-family: "Mukta Mahee";
+    color:var(--white);
+}
+.team .team-item .desc .social-icon{
+    margin-top: 5px;
+    opacity: 1;
+    visibility: visible;
+    transform:scale(0);
+    -webkit-transform:scale(0);
+    -moz-transform:scale(0);
+    -ms-transform:scale(0);
+    -o-transform:scale(0);
+    transition:all .4s  ease;
+    -webkit-transition:all .4s  ease;
+    -moz-transition:all .4s  ease;
+    -ms-transition:all .4s  ease;
+    -o-transition:all .4s  ease;
+    transform-origin: top center;
+}
+.team .team-item:hover .desc .social-icon{
+    
+    opacity: 1;
+    visibility: visible;
+    transform:scale(1);
+    -webkit-transform:scale(1);
+    -moz-transform:scale(1);
+    -ms-transform:scale(1);
+    -o-transform:scale(1);
+    
+}
+/* -------team end---------------- */
 /* -------media start---------------- */
 
 
