--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -823,21 +823,24 @@ header .container>.row .col-lg-6 .img-box>.plant-img-3{
 /* -------request end---------------- */
 /* -------team start---------------- */
 .team{
-    padding: 4rem 0;
+    padding: 2rem 0;
 }
-.team .owl-carousel
-{
-    margin-top: 2rem;
+.team .owl-carousel{
+    padding-top: 2rem;
+}
+.team .owl-carousel .owl-nav ,.team .owl-carousel .owl-dots{
+    display: none;
 }
 .team .team-item .team-img{
     width: 100%;
     position: relative;
 }
+
 .team .team-item{
     width: 90%;
-    margin: 0 auto;
+    margin: 0 auto 10px ;
     overflow: hidden;
-   position: relative;  
+    position: relative;  
 }
 .team .team-item .team-img img{
     width: 100%;
@@ -856,6 +859,8 @@ header .container>.row .col-lg-6 .img-box>.plant-img-3{
     -o-transform: scale(1.2);
 }
 .team .team-item .desc{
+    width:100%;
+    height: 100px;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -868,13 +873,14 @@ header .container>.row .col-lg-6 .img-box>.plant-img-3{
     -ms-transition:all .4s  ease;
     -o-transition:all .4s  ease;
     padding: 10px 20px ;
-    height: 100px;
+    
 }
 .team .team-item:hover .desc
 {
     box-shadow: 0 0 150px #eee;
-    height: 140px;
     bottom: 40px;
+    height: 140px;
+    
 }
 
 .team .team-item .desc a{
@@ -892,23 +898,24 @@ header .container>.row .col-lg-6 .img-box>.plant-img-3{
     color:var(--white);
 }
 .team .team-item .desc .social-icon{
-    margin-top: 5px;
-    opacity: 1;
-    visibility: visible;
-    transform:scale(0);
-    -webkit-transform:scale(0);
-    -moz-transform:scale(0);
-    -ms-transform:scale(0);
-    -o-transform:scale(0);
+    
+    margin-top: -10px;
+    opacity: 0;
+    visibility: hidden;
+    transform:scale(0.5);
+    -webkit-transform:scale(0.5);
+    -moz-transform:scale(0.5);
+    -ms-transform:scale(0.5);
+    -o-transform:scale(0.5);
     transition:all .4s  ease;
     -webkit-transition:all .4s  ease;
     -moz-transition:all .4s  ease;
     -ms-transition:all .4s  ease;
     -o-transition:all .4s  ease;
-    transform-origin: top center;
+    transform-origin: bottom center;
 }
 .team .team-item:hover .desc .social-icon{
-    
+    margin-top: 0px;
     opacity: 1;
     visibility: visible;
     transform:scale(1);
